<resources>
    <string name="app_name">BrewMac</string>
    <string name="cd_background_image">Background Image</string>
    <string name="cd_cogmac_logo">CogMacLogo</string>
    <string name="cd_backdrop_carousel">Carousel Backdrop</string>
    <string name="clear_for_new_entry">Clear for New Entry</string>
    <string name="add_update">Add/Update</string>
    <string name="image">Image :</string>
    <string name="sub_type">Sub Type :</string>
    <string name="type">Type :</string>
    <string name="description">Description :</string>
    <string name="beverage_name">Beverage Name :</string>
    <string name="beverage_name_default">Beverage Name</string>
    <string name="recipe_name">Recipe-Name</string>
    <string name="recipe_name_colon">Recipe Name :</string>
    <string name="price">Price :</string>
    <string name="visibility">Visibility</string>
    <string name="ingredients">Ingredients</string>
    <string name="glass_image">glass image</string>
    <string name="valve_configuration">Valve Configuration</string>
    <string name="database_sync">Database Sync</string>
    <string name="valve_bev_name">Valve Bev-Name</string>
    <string name="_122338_brew22">122338 Brew22</string>
    <string name="valve_122338">Valve:122338</string>
    <string name="set_qty">Set-Qty :</string>
    <string name="set_flow_rate">Set Flow Rate :</string>
    <string name="update">Update</string>
    <string name="carousel_item">carousel item</string>
    <string name="singles">Singles</string>
    <string name="cocktails">Cocktails</string>
    <string name="mocktails">Mocktails</string>
    <string name="pour">Pour</string>
    <string name="quantity">Quantity</string>

    <string name="menu">Menu</string>
    <string name="beverages">Beverages</string>
    <string name="favourites">Favourites</string>
    <string name="custom">Custom</string>
    <string name="recipe">Recipe</string>
    <string name="settings">Settings</string>
    <string name="serialText">%1$s.</string>
    <string name="test_buttons">Test Buttons:</string>
    <string name="one_sec">1sec</string>
    <string name="two_sec">2sec</string>
    <string name="three_sec">3sec</string>
    <string name="five_sec">5sec</string>

    <string-array name="bev_types_array">
        <item>Non-Alcoholic</item>
        <item>Alcoholic</item>
    </string-array>

</resources>
