<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/beverage_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gradient"
        android:layout_below="@id/appBar"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beverage_name_default"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/rel_bev_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/appBar"
        android:layout_toEndOf="@id/beverage_name"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edTv_bev_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/beverage_name"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edTv_bev_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text"
            tools:ignore="Autofill"/>

        <EditText
            android:id="@+id/edTv_bev_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            android:inputType="text"
            tools:ignore="Autofill"/>

        <EditText
            android:id="@+id/edTv_bev_sub_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sub_type"
            android:inputType="text"
            tools:ignore="Autofill"/>

        <EditText
            android:id="@+id/edTv_bev_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/image"
            android:inputType="text"
            tools:ignore="Autofill"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_gradient"
            android:text="@string/add_update"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#ffffff"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:padding="12dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_for_new_entry"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="16sp"
            android:background="@drawable/button_gradient"
            android:padding="12dp"
            android:textColor="#ffffff"
            android:textAllCaps="false"
            android:layout_marginStart="12dp"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_rubbish_bin"
        android:layout_alignParentBottom="true"
        app:fabSize="auto"
        android:layout_margin="32dp"/>

</RelativeLayout>