<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <include
        android:id="@+id/relToolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/nav_panel"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_below="@id/relToolbar"
        android:background="@drawable/side_bottom"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        android:weightSum="3">

        <ImageView
            android:contentDescription="@string/singles"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/singles_un" />

        <ImageView
            android:contentDescription="@string/cocktails"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/cocktails_un"
            />

        <ImageView
            android:contentDescription="@string/mocktails"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/moctails_un"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_drinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/nav_panel"
        android:layout_below="@id/relToolbar"
        android:scrollbars="none"
        android:layout_margin="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/nav_panel"
        android:layout_below="@id/recyclerView_drinks">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/glass"
            android:layout_marginBottom="48dp"
            android:layout_marginEnd="8dp"/>

        <ImageView
            android:id="@+id/glass"
            android:contentDescription="@string/glass_image"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:src="@drawable/glass"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btn_pour"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/circle"
            android:textColor="#fff"
            android:text="@string/pour"
            android:fontFamily="@font/signika_light"
            android:layout_margin="24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</RelativeLayout>
