<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:elevation="@dimen/margin_5">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:paddingBottom="@dimen/margin_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="enterAlwaysCollapsed"
            app:titleEnabled="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="none"
                app:layout_collapseParallaxMultiplier="0.1">

                <ImageView
                    android:contentDescription="@string/cd_cogmac_logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/main_background"
                    android:scaleType="fitXY"/>

                <RelativeLayout
                    android:id="@+id/relToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="top"
                    android:paddingStart="@dimen/margin_12"
                    android:paddingEnd="@dimen/margin_12"
                    android:paddingTop="@dimen/margin_10"
                    android:background="@color/black_light">

                    <ImageView
                        android:contentDescription="@string/cd_cogmac_logo"
                        android:id="@+id/imgCogmac"
                        android:layout_width="51dp"
                        android:layout_height="51dp"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/margin_6"
                        android:src="@drawable/cogmac_logo" />

                    <TextView
                        android:id="@+id/appNameTv"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="#ffffff"
                        android:textSize="24sp"
                        android:gravity="center_horizontal"
                        android:fontFamily="@font/satisfy_font"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/nav_panel"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_below="@id/relToolbar"
                    android:background="@drawable/side_bottom"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical"
                    android:weightSum="3">


                    <ImageView
                        android:contentDescription="@string/singles"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/singles_un" />

                    <ImageView
                        android:contentDescription="@string/cocktails"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/cocktails_un"
                        />

                    <ImageView
                        android:contentDescription="@string/mocktails"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/moctails_un"/>

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView_drinks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/nav_panel"
                    android:layout_below="@id/relToolbar"
                    android:scrollbars="none"
                    android:layout_margin="16dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/nav_panel"
                    android:layout_below="@id/recyclerView_drinks">

                    <ImageView
                        android:contentDescription="@string/glass_image"
                        android:layout_width="200dp"
                        android:layout_height="300dp"
                        android:src="@drawable/glass"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="16dp"/>

                </RelativeLayout>

            </RelativeLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


</android.support.design.widget.CoordinatorLayout>
